[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/orca_bear/orca_bear_adult/orca_bear.gd" type="Script" id=2]
[ext_resource path="res://entities/orca_bear/orca_bear_adult/sprites/side_attack/orca_attack.png" type="Texture" id=3]
[ext_resource path="res://entities/orca_bear/orca_bear_adult/sprites/side_default/orca_default.png" type="Texture" id=4]
[ext_resource path="res://entities/orca_bear/orca_bear_adult/sprites/side_special/orca_running.png" type="Texture" id=5]
[ext_resource path="res://entities/orca_bear/orca_bear_adult/sprites/side_hurt/orca_hurt.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "side_attack",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "side_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "side_default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "side_hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "side_run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 875.887

[sub_resource type="CircleShape2D" id=4]
radius = 133.185

[sub_resource type="CircleShape2D" id=5]
radius = 681.116

[sub_resource type="CircleShape2D" id=6]
radius = 300.137

[node name="orca_bear" type="KinematicBody2D"]
collision_layer = 130
collision_mask = 33015
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 7, 7 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "side_hurt"

[node name="fare_vision" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 240

[node name="CollisionShape2D" type="CollisionShape2D" parent="fare_vision"]
shape = SubResource( 3 )

[node name="close_vision" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 224

[node name="CollisionShape2D" type="CollisionShape2D" parent="close_vision"]
shape = SubResource( 4 )

[node name="close_smell" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="close_smell"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="poop" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="flee_area" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 32896

[node name="CollisionShape2D" type="CollisionShape2D" parent="flee_area"]
shape = SubResource( 5 )

[node name="flee_area_tiny" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 32896

[node name="CollisionShape2D" type="CollisionShape2D" parent="flee_area_tiny"]
shape = SubResource( 6 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="fare_vision" to="." method="_on_fare_vision_body_entered"]
[connection signal="body_exited" from="fare_vision" to="." method="_on_fare_vision_body_exited"]
[connection signal="body_entered" from="close_vision" to="." method="_on_close_vision_body_entered"]
[connection signal="body_exited" from="close_vision" to="." method="_on_close_vision_body_exited"]
[connection signal="body_entered" from="close_smell" to="." method="_on_close_smell_body_entered"]
[connection signal="body_exited" from="close_smell" to="." method="_on_close_smell_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="poop" to="." method="_on_poop_timeout"]
[connection signal="body_exited" from="flee_area" to="." method="_on_flee_area_body_exited"]
[connection signal="body_entered" from="flee_area_tiny" to="." method="_on_flee_area_tiny_body_entered"]
